@@ -1,3 +1,11 @@
+2006-04-13  Christian Persch  <chpe@cvs.gnome.org>
+
+	* configure.ac:
+	* embed/mozilla/GtkNSSDialogs.cpp:
+
+	Check for nsIMutableArray.h and include it if found. Fixes build with
+	gecko trunk.
+
 2006-04-15  Tommi Komulainen  <tommi.komulainen@iki.fi>
 
 	* lib/widgets/ephy-location-entry.c (update_favicon): Replace
